// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edabit challenges snapshots Challenge 1 1`] = `
<div>
  <div>
    Input: 
    <input />
    <button
      onClick={[Function]}
    >
      Convert
    </button>
  </div>
</div>
`;

exports[`Edabit challenges snapshots Challenge 2 1`] = `
<div
  className=""
>
  <div>
    Input: 
    <input
      min={0}
      type="number"
    />
    <button
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Edabit challenges snapshots Challenge 3 1`] = `
<div
  className=""
>
  <div>
    <div>
      Input: 
      <input
        onKeyDown={[Function]}
        type="number"
      />
      <button
        onClick={[Function]}
      >
        Submit
      </button>
    </div>
  </div>
  <div>
    <div>
      Output:
    </div>
  </div>
</div>
`;

exports[`Edabit challenges snapshots Challenge 4 1`] = `
<div
  className=""
>
  <div>
    Input: 
    <input
      min={1}
      type="number"
    />
    <button
      onClick={[Function]}
    >
      Play
    </button>
  </div>
</div>
`;

exports[`Edabit challenges snapshots Challenge 5 1`] = `
<div
  className=""
>
  <div>
    <div>
      Input: 
      <input
        onKeyDown={[Function]}
        type="number"
      />
      <button
        onClick={[Function]}
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`Edabit challenges snapshots Challenge 6 1`] = `
<div
  className=""
>
  <div>
    Input: 
    <input
      min={1}
      type="number"
    />
    <button
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
  <div>
    Output: 
    Yes
  </div>
</div>
`;

exports[`Edabit challenges snapshots Challenge 7 1`] = `
<div
  className=""
>
  <div>
    Input: 
    <input
      min={1}
      type="number"
    />
    <button
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
  <div>
    Output: 
    <strong />
  </div>
</div>
`;

exports[`Edabit challenges snapshots Challenge 8 1`] = `
<div
  className=""
>
  <div>
    <div>
      Uphill Time: 
      <input
        type="number"
      />
    </div>
    <div>
      Uphill Rate: 
      <input
        type="number"
      />
    </div>
    <div>
      Downhill Rate: 
      <input
        type="number"
      />
    </div>
    <button
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Edabit challenges snapshots Challenge 9 1`] = `
<div
  className=""
>
  <div>
    <div>
      Object: 
      <textarea />
    </div>
    <div>
      Number: 
      <input
        type="number"
      />
    </div>
    <button
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
  <div>
    Output: 
    <strong />
  </div>
</div>
`;

exports[`Edabit challenges snapshots Challenge 10 1`] = `
<div
  className=""
>
  <div>
    <div>
      Input: 
      <input
        onKeyDown={[Function]}
      />
      <button
        onClick={[Function]}
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`Edabit challenges snapshots Challenge 11 1`] = `
<div
  className=""
>
  <div>
    <div>
      Input: 
      <input
        onKeyDown={[Function]}
      />
      <button
        onClick={[Function]}
      >
        Submit
      </button>
    </div>
  </div>
  <div>
    <div>
      Output:
    </div>
  </div>
</div>
`;

exports[`Edabit challenges snapshots Challenge 12 1`] = `
<div
  className=""
>
  <div>
    <div>
      Input: 
      <input
        onKeyDown={[Function]}
      />
      <button
        onClick={[Function]}
      >
        Submit
      </button>
    </div>
  </div>
  <div>
    Output: 
    <strong />
  </div>
</div>
`;

exports[`Edabit challenges snapshots Challenge 13 1`] = `
<div
  className=""
>
  <div>
    <div>
      Input: 
      <input
        onKeyDown={[Function]}
      />
      <button
        onClick={[Function]}
      >
        Submit
      </button>
    </div>
  </div>
  <div>
    Output: 
    <strong>
      No
    </strong>
  </div>
</div>
`;

exports[`Edabit challenges snapshots Challenge 14 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div>
    <div>
      Surname: 
      <input
        name="surname"
      />
    </div>
    <div>
      Name: 
      <input
        name="name"
      />
    </div>
    <div>
      Gender: 
      <input
        name="gender"
      />
    </div>
    <div>
      DOB: 
      <input
        name="dob"
      />
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </div>
  <div>
    Output: 
    <strong />
  </div>
</form>
`;
